Moves flyweight to Java 11